# netatmoapi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  setup.cfg
docs/: conf.py  reference.rst  reference_grant.rst  reference_object.rst
src/netatmoapi/: __init__.py  _misc.py  _netatmo.py  grant.py
src/netatmoapi/object/: __init__.py  _common.py  _data.py  _status.py
tests/: home_status.json  homes_data.json  test_object.py
