[metadata]
name = netatmoapi
version = 0.1.0
url = https://opensource.cze.tech/netatmoapi
project_urls =
    Source = https://github.com/czetech/netatmoapi
    Tracker = https://github.com/czetech/netatmoapi/issues
    Documentation = https://netatmoapi.readthedocs.io/
author = Petr Czepiec
author_email = petr@czepiec.me
maintainer = Petr Czepiec
maintainer_email = petr@czepiec.me
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: AsyncIO
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Home Automation
    Typing :: Typed
license = MIT
license_files = LICENSE
description = Client library to access the Netatmo API.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = home-automation, netatmo, legrand

[options]
zip_safe = True
install_requires =
    aiohttp~=3.8
    pytz
    yarl~=1.7
python_requires = >=3.8
packages = find:
package_dir = = src

[options.packages.find]
where = src

[flake8]
ignore = D105,D107,E203,E501,W503
per-file-ignores =
    tests/test_*: D100,D103
max-line-length = 80
select = B,C,D,E,F,N,W,B9
max-complexity = 12
